<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Colorful Japanese</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_new_word">NewWordActivity</string>
    <string name="title_activity_flash_card_new_word">FlashCardNewWordActivity</string>
    <string name="title_activity_test_new_word">TestNewWordActivity</string>
    <string name="title_activity_sliding_pane_unit">SlidingPaneUnitActivity</string>
    <string name="title_activity_view_slide_character">ViewSlideCharacter</string>
    <string name="title_activity_gramma">GrammaActivity</string>
    <string name="character">Chữ cái</string>
    <string name="newword">Từ mới</string>
    <string name="flashcard">"Thẻ từ "</string>
    <string name="check">Vẽ chữ</string>
    <string name="next">Tiếp</string>
    <string name="back">Trở lại</string>
    <string name="test">Kiểm tra</string>
    <string name="unit">Bài học</string>
    <string name="click_to_write">Tập việt</string>
    <string name="click_to_test">Kiểm tra</string>
    <string name="bing_translator">Dịch với Bing</string>
    <string name="result">Kết quả</string>
    <string name="hiragana">Hiragana</string>
    <string name="katakana">Katakana</string>
</resources>
