<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relative_layout_word"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/spacetitleword"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#336600"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/backCharacter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true" >

            <ImageView
                android:layout_width="15dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:layout_marginLeft="0dp"
                android:background="@drawable/back" />

            <TextView
                android:id="@+id/tvCharBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/character"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvTitleunit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/newword"
            android:textColor="#FFFFFF"
            android:textSize="30dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/clickToTestNewWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:layout_marginRight="0dp"
                android:background="@drawable/next" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/toUnit"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/spacetitleword"
        android:background="#333333"
        android:gravity="center" >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/book" />

        <TextView
            android:id="@+id/titleUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/unit"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />
    </LinearLayout>

    
    <ListView
        android:id="@+id/listWordEachUnit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toUnit" >
    </ListView>

   
    <LinearLayout
        android:id="@+id/btnFlashCardShow"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:background="#EE333333"
        android:gravity="center" >

        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:background="@drawable/icon_flashcard" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/flashcard"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />
    </LinearLayout>
		
</RelativeLayout>