<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity$PlaceholderFragment" >

    <RelativeLayout
        android:id="@+id/titleCharacter"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#3366cc" >

        <Button
            android:id="@+id/spaceOfButtonCharacter"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/cardbutton"
            android:textColor="#FFFFFF"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/character"
            android:textColor="#FFFFFF"
            android:textSize="30dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/toNewWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" >

            <TextView
                android:id="@+id/tvWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newword"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="0dp"
                android:background="@drawable/next" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/btnChangeTypeChar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/titleCharacter"
        android:background="#333333"
        android:gravity="center" >

        

        <TextView
            android:id="@+id/btnTest1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="Hiragana"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/btnChangeTypeChar" >

        <GridView
            android:id="@+id/characterHiraganaGrid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:numColumns="5" >
        </GridView>
    </LinearLayout>

    <SlidingDrawer
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:content="@+id/content"
        android:handle="@+id/handle" >

        <!--
        <Button
            android:id="@+id/handle"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:background="@drawable/up" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E6E6DC"
            android:orientation="vertical" >
        -->

        <LinearLayout
            android:id="@+id/handle"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="#EE333333"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bing_translator"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="#E6E6DC" >

            <EditText
                android:id="@+id/edtTranslate"
                android:layout_width="match_parent"
                android:paddingLeft="10dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_editer"
                android:textColor="#81A594" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/btnTranslate"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/searchbutton" />

            <TextView
                android:id="@+id/tv_resultTranslate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/edtTranslate"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_editer"
                android:textColor="#81A594"
                android:textSize="30dp" />

            <ToggleButton
                android:id="@+id/btnChange"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_below="@id/btnTranslate"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/toggle_selector"
                android:textOff=""
                android:textOn="" />
        </RelativeLayout>
    </SlidingDrawer>

</RelativeLayout>